added inquirer prompts, created employees_db database and template seed data

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^8.2.4",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.2.3"
   }
 }
